caproto/v0.8.1/_sources/generated/caproto.server.records.AiFields.rst.txt
caproto.server.records.AiFields
===============================


.. currentmodule:: caproto.server.records

.. inheritance-diagram:: AiFields

.. autoclass:: AiFields

    .. if not using autodoc, add this here: automethod:: __init__

    

    
    
        .. note:: To use this, specify
                  ``record="ai"`` in a
                  :class:`pvproperty`.
    
    

    
    
    .. list-table:: AiFields pvproperties
        :header-rows: 1
        :widths: auto

        *  - Attribute
           - Suffix
           - Docs
           - Type
           - Notes
           - Alarm Group
    
        *  - access_security_group
           - ``ASG``
           - Access Security Group
           - CHAR 
           - 
                 Length(29)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - adjustment_offset
           - ``AOFF``
           - Adjustment Offset
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - adjustment_slope
           - ``ASLO``
           - Adjustment Slope
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - alarm_acknowledge_severity
           - ``ACKS``
           - Alarm Ack Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_acknowledge_transient
           - ``ACKT``
           - Alarm Ack Transient
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - alarm_deadband
           - ``HYST``
           - Alarm Deadband
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - alarm_filter_time_constant
           - ``AFTC``
           - Alarm Filter Time Constant
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - alarm_filter_value
           - ``AFVL``
           - Alarm Filter Value
           - DOUBLE 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - alarm_status
           - ``STAT``
           - Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - archive_deadband
           - ``ADEL``
           - Archive Deadband
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
                 **Get**
                 **Put**
           - 
    
        *  - current_alarm_severity
           - ``SEVR``
           - Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - current_raw_value
           - ``RVAL``
           - Current Raw Value
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - dbputfield_process
           - ``PUTF``
           - dbPutField process
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - description
           - ``DESC``
           - Descriptor
           - CHAR 
           - 
                 Length(41)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - device_type
           - ``DTYP``
           - Device Type
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable
           - ``DISA``
           - Disable
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_alarm_severity
           - ``DISS``
           - Disable Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_putfield
           - ``DISP``
           - Disable putField
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - disable_value
           - ``DISV``
           - Disable Value
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - display_precision
           - ``PREC``
           - Display Precision
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
                 **Get**
                 **Put**
           - 
    
        *  - engineer_units_full
           - ``EGUF``
           - Engineer Units Full
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - engineer_units_low
           - ``EGUL``
           - Engineer Units Low
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - engineering_units
           - ``EGU``
           - Engineering Units
           - CHAR 
           - 
                 Length(16)
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - event_name
           - ``EVNT``
           - Event Name
           - CHAR 
           - 
                 Length(40)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - forward_link
           - ``FLNK``
           - Forward Process Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - high_alarm_limit
           - ``HIGH``
           - High Alarm Limit
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._Limits`
                 **Get**
                 **Put**
           - 
    
        *  - high_operating_range
           - ``HOPR``
           - High Operating Range
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._Limits`
                 **Get**
                 **Put**
           - 
    
        *  - high_severity
           - ``HSV``
           - High Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._Limits`
           - 
    
        *  - hihi_alarm_limit
           - ``HIHI``
           - Hihi Alarm Limit
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._Limits`
                 **Get**
                 **Put**
           - 
    
        *  - hihi_severity
           - ``HHSV``
           - Hihi Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._Limits`
           - 
    
        *  - initialized
           - ``INIT``
           - Initialized?
           - INT 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - input_specification
           - ``INP``
           - Input Specification
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - last_val_monitored
           - ``MLST``
           - Last Val Monitored
           - DOUBLE 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - last_value_alarmed
           - ``LALM``
           - Last Value Alarmed
           - DOUBLE 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - last_value_archived
           - ``ALST``
           - Last Value Archived
           - DOUBLE 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - lastbreak_point
           - ``LBRK``
           - LastBreak Point
           - INT 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - linearization
           - ``LINR``
           - Linearization
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - lock_count
           - ``LCNT``
           - Lock Count
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - lolo_alarm_limit
           - ``LOLO``
           - Lolo Alarm Limit
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._Limits`
                 **Get**
                 **Put**
           - 
    
        *  - lolo_severity
           - ``LLSV``
           - Lolo Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._Limits`
           - 
    
        *  - low_alarm_limit
           - ``LOW``
           - Low Alarm Limit
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._Limits`
                 **Get**
                 **Put**
           - 
    
        *  - low_operating_range
           - ``LOPR``
           - Low Operating Range
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._Limits`
                 **Get**
                 **Put**
           - 
    
        *  - low_severity
           - ``LSV``
           - Low Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.mixins._Limits`
           - 
    
        *  - monitor_deadband
           - ``MDEL``
           - Monitor Deadband
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
                 **Get**
                 **Put**
           - 
    
        *  - new_alarm_severity
           - ``NSEV``
           - New Alarm Severity
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - new_alarm_status
           - ``NSTA``
           - New Alarm Status
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - prev_simulation_mode
           - ``OLDSIMM``
           - Prev. Simulation Mode
           - ENUM 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - previous_raw_value
           - ``ORAW``
           - Previous Raw Value
           - LONG 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - process_at_iocinit
           - ``PINI``
           - Process at iocInit
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - process_record
           - ``PROC``
           - Force Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - raw_offset
           - ``ROFF``
           - Raw Offset
           - LONG 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - raw_to_egu_offset
           - ``EOFF``
           - Raw to EGU Offset
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - raw_to_egu_slope
           - ``ESLO``
           - Raw to EGU Slope
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - record_active
           - ``PACT``
           - Record active
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_name
           - ``NAME``
           - Record Name
           - CHAR 
           - 
                 **Read-only**
                 Length(61)
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - record_type
           - ``RTYP``
           - Record type
           - STRING 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.records.RecordFieldGroup`
           - 
    
        *  - reprocess
           - ``RPRO``
           - Reprocess 
           - CHAR 
           - 
                 **Read-only**
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_phase
           - ``PHAS``
           - Scan Phase
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scan_rate
           - ``SCAN``
           - Scan Mechanism
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scanning_disable
           - ``SDIS``
           - Scanning Disable
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - scheduling_priority
           - ``PRIO``
           - Scheduling Priority
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - sim_mode_async_delay
           - ``SDLY``
           - Sim. Mode Async Delay
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - sim_mode_scan
           - ``SSCN``
           - Sim. Mode Scan
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - simulation_input_link
           - ``SIOL``
           - Simulation Input Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - simulation_mode
           - ``SIMM``
           - Simulation Mode
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - simulation_mode_link
           - ``SIML``
           - Simulation Mode Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - simulation_mode_severity
           - ``SIMS``
           - Simulation Mode Severity
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - simulation_value
           - ``SVAL``
           - Simulation Value
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - smoothing
           - ``SMOO``
           - Smoothing
           - DOUBLE 
           - 
                 Inherited from :class:`~caproto.server.records.base.AiFields`
           - 
    
        *  - time_stamp_event
           - ``TSE``
           - Time Stamp Event
           - INT 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - time_stamp_link
           - ``TSEL``
           - Time Stamp Link
           - STRING 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - trace_processing
           - ``TPRO``
           - Trace Processing
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined
           - ``UDF``
           - Undefined
           - CHAR 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
        *  - undefined_alarm_severity
           - ``UDFS``
           - Undefined Alarm Sevrty
           - ENUM 
           - 
                 Inherited from :class:`~caproto.server.records.base.RecordFieldGroup`
           - 
    
    

    
    

    
    
    .. rubric:: Methods

    .. autosummary::
    
       ~AiFields.group_read
       ~AiFields.group_write
       ~AiFields.publish
       ~AiFields.value_write_hook
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::

    
       ~AiFields.default_values
       ~AiFields.has_val_field
       ~AiFields.scan_rate_sec
       ~AiFields.type_map
       ~AiFields.type_map_read_only
    

    
    .. rubric:: pvproperty methods
    .. method:: archive_deadband.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.10/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: display_precision.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.10/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: high_alarm_limit.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.10/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: high_operating_range.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.10/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: hihi_alarm_limit.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.10/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: lolo_alarm_limit.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.10/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: low_alarm_limit.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.10/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: low_operating_range.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.10/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40
    .. method:: monitor_deadband.getter(self, instance)
        

    
    .. literalinclude:: /../../../../../../../opt/hostedtoolcache/Python/3.8.10/x64/lib/python3.8/site-packages/caproto/server/records/utils.py
        :language: python
        :linenos:
        :dedent: 4
        :lineno-start: 38
        :lines: 38-40